--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 *.testlog
+*.manifest
+/.vs/VSWorkspaceState.json
